--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
 </head>
 
 <body onload="init()">
+  <script src="/socket.io/socket.io.js"></script>
+  <script>
+    var socket = io.connect('http://localhost');
+    socket.on('news', function(data) {
+        console.log(data);
+        socket.emit('my other event', { my: 'data' });
+    });
+  </script>
   <canvas id="canvas" width="650" height="100" style="border: 4px solid gray; 
     width: 650px; height: 100px; background-color: #ff8100"></canvas>
   <script src="canvas.js" type="text/javascript"></script>
