--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   </style>
 
   <!--Include js scripts-->
-  <script src="js/plotly-latest.min.js"></script>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Albedo Graphs</title>
@@ -23,25 +22,21 @@
   <script src="/socket.io/socket.io.js"></script>
   <script>
     var socket = io.connect('http://localhost');
-    socket.on('news', function(data) {
+    socket.on('plot', function(data) {
+        $('messages').html(temp);
         console.log(data);
         socket.emit('my other event', { my: 'data' });
     });
   </script>
   <canvas id="canvas" width="650" height="100" style="border: 4px solid gray; 
     width: 650px; height: 100px; background-color: #ff8100"></canvas>
-  <script src="canvas.js" type="text/javascript"></script>
+  <script src="js/canvas.js" type="text/javascript"></script>
 
   <header>
   <h2><strong>Smoothie Chart demo</strong> <em>with fake cpu data</em></h2>
   </header>
   <canvas id="host1Cpu" width="650" height="100"></canvas>
   <script type="text/javascript" src="js/chart.js"></script>
-
-<p><strong>Example of real-time streaming</strong> <em>using Plotly,
-with randomly-generated y-values</em></p>
-<div id="stream"></div>
-<script type="text/javascript" src="js/plotlyscript.js"></script>
 
 </body>
 
