--- a/static/index.html
+++ b/static/index.html
@@ -26,7 +26,7 @@
       for (var i = 0; i < 50; i++) {
         readings.append(new Date(endTime - i*500), 0.75);
       }
-      var ws = new ReconnectingWebSocket('ws://raspberrypi:8000/');
+      var ws = new ReconnectingWebSocket('ws://localhost:8000/');
       ws.onopen = function() {
         document.body.style.backgroundColor = '#cfc';
 	var timeStart = new Date();
