--- a/static/index.html
+++ b/static/index.html
@@ -10,39 +10,75 @@
     <script type="text/javascript" src="vendor/jquery.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
+
+  <!--createTimeline() is called first-->
   <body onload="createTimeline()">
+    
+    <!--Title for the Smoothie.js plot of real-time data-->
     <h2>Albedo values from the last x seconds</h2>
+
+    <!--Print out the timestamp and albedo value here upon update-->
     <div id="text"></div>
+
     <br>
     <br>
-    <script type="text/javascript">
-      var value = 0.75;
-      var readings = new TimeSeries();
-    </script>
+
+    <!--Chart-->
 
     <canvas id="chart" width="800" height="250"></canvas>
     <script type="text/javascript">
+
+      // Global variables
+      var value = 0.75;
+      var readings = new TimeSeries();
+      
+      // CONSTANTS
+      var INIT_PLOT_WITH_READINGS = 50; // use this to fill the plot with
+      var INIT_SCALE_TIME = 500;        // 0.75 to begin with
+      var WEB_ADDRESS = 'ws://localhost:8000/'; // the address for web page
+      var ROUND_TWO_DIGITS = 100; // Use this to round a float to 2 digits
+      var STREAM_DELAY = 1000; // how long to delay when streaming chart
+
       var endTime = Date.now();
-      for (var i = 0; i < 50; i++) {
-        readings.append(new Date(endTime - i*500), 0.75);
+      for (var i = 0; i < INIT_PLOT_WITH_READINGS; i++) {
+        readings.append(new Date(endTime - i*INIT_SCALE_TIME), value);
       }
-      var ws = new ReconnectingWebSocket('ws://localhost:8000/');
+
+      // Web socket gets values from the log.txt file where data is written
+      var ws = new ReconnectingWebSocket(WEB_ADDRESS);
+      /*
+       * Handler for when a client opens a connection
+       */ 
       ws.onopen = function() {
-        ws.send("Hello, world");
         document.body.style.backgroundColor = '#cfc';
       };
+
+      /*
+       * Handler for when a client closes a connection
+       */ 
       ws.onclose = function() {
         document.body.style.backgroundColor = null;
       };
+
+      /*
+       * Handler for when the client receives a message
+       * @param event - passed to the client via websocket
+       */
       ws.onmessage = function(event) {
-        document.getElementById('text').textContent = "no";
+        // document.getElementById('text').textContent = "onmessage was called";
+
+        // Get event passed to client; parse the data (should be type float)
         value = parseFloat(event.data);
+
         // On the canvas, update the TIME: __ ALBEDO: __ label with the albedo
         // value, rounded to 2 decimal places
         document.getElementById('text').textContent = 'TIME ' + (new Date()) 
-          + ' ALBEDO: ' + (Math.round(value*100) / 100) + '\n';
+          + ' ALBEDO: ' + (Math.round(value*ROUND_TWO_DIGITS)/ROUND_TWO_DIGITS)
+          + '\n';
+
         readings.append(new Date().getTime(), value);
       };
+
       /*
        * Create the actual chart and handle updating it;
        * This uses the smoothie-js library from Joe Walnes
@@ -50,29 +86,34 @@
       function createTimeline() {
         // Initialize the chart with some default settings
         var chart = new SmoothieChart({
-          fps: 30, millisPerPixel: 20, 
+          fps: 30, 
+          millisPerPixel: 20, // scroll speed
           grid: { 
             millisPerLine: 1000, verticalSections: 4,
           }, 
-          interpolation:'bezier',
-          minValue:0.0,
-          maxValue:1.0
+          interpolation:'bezier', // 'linear' for (jagged) or 'step' (boxy)
+          minValue:0.0, // minimum value should be fixed at 0
+          maxValue:1.0  // maximum value should be fixed at 1
         });
+
         // This is where the chart gets data
         // We'll "update" the chart by appending data to this TimeSeries
         chart.addTimeSeries(readings, { 
-            strokeStyle: 'rgba(0, 255, 0, 0.6)',
-            fillStyle: 'rgba(0, 0, 255, 0.2)',
-            lineWidth: 3 });
+            strokeStyle: 'rgba(0, 255, 0, 0.6)', // line color
+            fillStyle: 'rgba(0, 0, 255, 0.2)', // shade the area under graph
+            lineWidth: 3 // line width
+        });
         // This chart streams to the canvas "chart" declared in HTML code
-        chart.streamTo(document.getElementById("chart"), 1000);
+        chart.streamTo(document.getElementById("chart"), STREAM_DELAY);
       }
     </script>
     <br>
-    <!--This canvas creates and updates the gauge/bar displaying global albedo-->
+    <!--This canvas creates/updates the global albedo gauge/bar-->
     <canvas id="canvas" width="650" height="100" style="border: 4px solid gray;
       width: 650px; height: 100px; background-color: #ff8100"></canvas>
     <script type="text/javascript">
+      var CANVAS_CONTEXT = "2d";
+
       /* 
        * Context Object wraps everything nicely; includes func to initialize
        * canvas.
@@ -82,7 +123,7 @@
         context: null,
         create: function(canvas_tag_id) {
           this.canvas = document.getElementById(canvas_tag_id);
-          this.context = this.canvas.getContext("2d");
+          this.context = this.canvas.getContext(CANVAS_CONTEXT);
           return this.context;
         }
       };
@@ -93,49 +134,67 @@
           /* "canvas" string - we get Element by ID from the html file */
           Context.create("canvas"); 
 
-          var albedo = 0.75;
+          var DRAW_INTERVAL = 300; // call draw() function every 300 ms
+
+          var albedo = value; // albedo starts at value (0.75), will be adjusted
+          // CONSTANT VARS for Albedo Gauge on canvas
           var BAR_WIDTH = 450;
           var BAR_HEIGHT = 10;
           var RADIUS = 5;
-          var textYPos = 20;
-          var xPos = 50;
-          var yPos = 60;
+          var TEXT_Y_POS = 20;
+          var X_POS = 50;
+          var Y_POS = 60;
           var MAX = BAR_WIDTH;
           var MIN = 0;
+          var BACKGROUND_COLOR = "#ff8100";
+          var ALBEDO_GAUGE_BACKGROUND = "#a0a0a0";
+          var ALBEDO_BAR_COLOR = "#ffffff";
+          var ALBEDO_GAUGE_FONT = "42px Courier New";
+          var STR_ALBEDO_LABEL = "Global Albedo ";
+          var CENTER_TEXT_VERTICAL = 2;
 
-          // loops
+          /*
+           * This function gets called every DRAW_INTERVAL milliseconds.
+           * It takes care of updating the albedo gauge/bar
+           */
           function draw() {
             drawBackground();
-            albedo = Math.round(value*100)/100;
+            albedo = Math.round(value*ROUND_TWO_DIGITS)/ROUND_TWO_DIGITS;
             drawAlbedoGauge();
           }
 
+          /*
+           * Draws background for canvas on which albedo gauge sits
+           */
           function drawBackground() {
             Context.context.beginPath();
-            Context.context.fillStyle = "#ff8100";
+            Context.context.fillStyle = BACKGROUND_COLOR;
             Context.context.fillRect(0,0,canvas.width,canvas.height);
             Context.context.closePath();
           }
 
-          // Function to create and draw healthbar
+          /*
+           * Draws albedo gauge
+           */
           function drawAlbedoGauge() {
 
             /* Bar underneath is gray */
-            Context.context.fillStyle = "#a0a0a0";
-            roundRect(Context.context, xPos, yPos,
+            Context.context.fillStyle = ALBEDO_GAUGE_BACKGROUND;
+            roundRect(Context.context, X_POS, Y_POS,
                 BAR_WIDTH, BAR_HEIGHT, RADIUS, false, false);
             Context.context.fill();
             Context.context.closePath();
 
             /* White text and bar */
             Context.context.beginPath();
-            Context.context.fillStyle = "#ffffff";
-            roundRect(Context.context, xPos, yPos, albedo * BAR_WIDTH, BAR_HEIGHT, RADIUS,
-                true, false);
+            Context.context.fillStyle = ALBEDO_BAR_COLOR;
+            roundRect(Context.context, X_POS, Y_POS, albedo * BAR_WIDTH, 
+                BAR_HEIGHT, RADIUS, true, false);
             Context.context.fill();
 
-            Context.context.font = "42px Courier New";
-            Context.context.fillText("Global Albedo " + albedo, xPos, canvas.height / 2);
+            Context.context.font = ALBEDO_GAUGE_FONT;
+            Context.context.fillText(STR_ALBEDO_LABEL + albedo, 
+                X_POS, canvas.height / CENTER_TEXT_VERTICAL);
             Context.context.closePath();
           }
 
@@ -143,6 +202,11 @@
            * Draws a rounded rectangle using the current state of the canvas.
            * If you omit the last three params, it will draw a rectangle
            * outline with a 5 pixel border radius
+           *
+           * This function comes from:
+           *    https://stackoverflow.com/questions/1255512/
+           *          how-to-draw-a-rounded-rectangle-on-html-canvas
+           *
            * @param {CanvasRenderingContext2D} ctx
            * @param {Number} x The top left x coordinate
            * @param {Number} y The top left y coordinate
@@ -158,11 +222,12 @@
            * @param {Boolean} [stroke = true] Whether to stroke the rectangle.
            */
           function roundRect(ctx, x, y, width, height, radius, fill, stroke) {
+            var DEFAULT_RADIUS = 5;
             if (typeof stroke == 'undefined') {
               stroke = true;
             }
             if (typeof radius === 'undefined') {
-              radius = 5;
+              radius = DEFAULT_RADIUS;
             }
             if (typeof radius === 'number') {
               radius = {tl: radius, tr: radius, br: radius, bl: radius};
@@ -194,7 +259,7 @@
           }
 
           /* Tells the draw() function to repeat */
-          setInterval(draw, 300);
+          setInterval(draw, DRAW_INTERVAL);
 
       });
 
